2016/09/01 v118
	1. Hide the artifact bar, use the info bar to display the artifact power.

2016/08/30 v116
	1. The container view system would load the container with a delay for each one, so it won't lag when you open it for the first time.
	2. A default container view is added, you can't modify it, and it will loaded when you entering the game, so you can still use items when you entering the game in combat.

2016/08/29 v115
	1. Replace the icon of group roles.

2016/08/28 v114
	1. 'Use Debuff color' & 'Use Smoothing Color' is added to raid panel's menu.
	2. Fix the totembar, totem can be canceled.

2016/08/28 v113
	1. Re-design the layout of the unitframes, the data is cleared.
	2. Fix the lag when sort container, need new igas lib.

2016/08/27 v112
	1. Add IsBindOnEquip(UnBind) rule for container view sytem.

2016/08/24 v111
	1. Add info for aura icons on unitframes.

2016/08/24 v108
	1.soul-fragments is added for demon-hunter as class power.

2016/08/24 v107
	1. Fix player can't enter the game with too many container views.

2016/08/24 v106
	1. Fix the lag when sort items in the bank and container.

2016/08/24 v105
	1. Change the equip set would update the container view.

2016/08/24 v104
	1. Fix the cooldown size of the action buttons.

2016/08/24 v103
	1. 'IsUnknownAppearance' rule added for container view to only show the items with unknow appearance that can be added to your wardrobe.

2016/08/23 v102
	1. Fix container bag still shown when the container view module is actived.

2016/08/23 v101
	1. Fix for dynamic item level.

2016/08/23 v100
	1. Fix the item level by using info form gametooltip.
	2. Add equipsetitem rule for container view, so you can seperate them from others.

2016/08/22 v99
	1. Add item level for equipment in the container buttons.
	2. Add seperate for containers in one view.
	3. You can use R in the view manager to change the name.

2016/08/22 v98
	1. Esc will close the container and bank correctly.